--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --watch src --ext ts --exec ts-node src/index.ts"
+     "start": "node dist/index.js",         
+    "build": "tsc",                        
+    "start:dev": "nodemon --exec ts-node src/index.ts"  
   },
   "author": "",
   "license": "ISC",
